--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.0",
+    "node-sass": "^3.10.0",
+    "sass-loader": "^4.0.2",
     "vue": "^1.0.0",
     "vue-resource": "^1.0.2",
     "vue-router": "^0.7.13",
