--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "description": "integral mall of justtong",
   "author": "周兆奔 <zzb@justtong.com>",
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot",
+    "dev": "webpack-dev-server --progress --profile --colors --inline --hot --port 8080",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "cssnext-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fastclick": "^1.0.6",
     "node-sass": "^3.10.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
