--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-resource": "^1.0.2",
     "vue-router": "^0.7.13",
     "vuex": "^1.0.0-rc.2",
-    "webpack-zepto": "^0.0.1"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
