--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "vue": "^1.0.0",
+    "vue-awesome-swiper": "^2.1.0",
     "vue-resource": "^1.0.2",
     "vue-router": "^0.7.13",
     "vuex": "^1.0.0-rc.2",
