--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-awesome-swiper": "^2.1.0",
     "vue-resource": "^1.0.2",
     "vue-router": "^0.7.13",
+    "vue-touch": "^1.1.0",
     "vuex": "^1.0.0-rc.2",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
