--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "vue-resource": "^1.0.2",
     "vue-router": "^0.7.13",
     "vue-touch": "^1.1.0",
-    "vuex": "^2.0.0",
+    "vuex": "^1.0.0",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1"
+    "webpack-dev-server": "^1.16.1",
+    "weixin-js-sdk": "^1.0.7"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
