--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cssnext-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "fastclick": "^1.0.6",
+    "html-webpack-plugin": "^2.24.0",
     "node-sass": "^3.10.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
