--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue": "^2.0.1",
+    "vue-awesome-swiper": "^2.2.3",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0",
