--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "weixin-js-sdk": "^1.0.7"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.3",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "postcss-loader": "^1.1.1",
     "vue-loader": "^9.7.0"
   }
 }
