--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0",
+    "vue-loader": "^9.7.0",
     "webpack": "^2.1.0-beta.27",
     "webpack-dev-server": "^2.1.0-beta.11",
-    "weixin-js-sdk": "^1.0.7"
-  },
-  "devDependencies": {
+    "weixin-js-sdk": "^1.0.7",
     "autoprefixer": "^6.5.3",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
@@ -31,7 +30,9 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
-    "postcss-loader": "^1.1.1",
-    "vue-loader": "^9.7.0"
+    "postcss-loader": "^1.1.1"
+  },
+  "devDependencies": {
+
   }
 }
