--- a/package.json
+++ b/package.json
@@ -8,31 +8,31 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "fastclick": "^1.0.6",
-    "node-sass": "^3.10.1",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "vue": "^2.0.1",
-    "vue-awesome-swiper": "^2.2.3",
-    "vue-resource": "^1.0.3",
-    "vue-router": "^2.0.1",
-    "vuex": "^2.0.0",
-    "vue-loader": "^9.7.0",
-    "webpack": "^2.1.0-beta.27",
-    "webpack-dev-server": "^2.1.0-beta.11",
-    "weixin-js-sdk": "^1.0.7",
     "autoprefixer": "^6.5.3",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "fastclick": "^1.0.6",
     "file-loader": "^0.9.0",
-    "postcss-loader": "^1.1.1"
+    "js-sha1": "^0.4.0",
+    "json-loader": "^0.5.4",
+    "node-sass": "^3.10.1",
+    "postcss-loader": "^1.1.1",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "vue": "^2.0.1",
+    "vue-awesome-swiper": "^2.2.3",
+    "vue-loader": "^9.7.0",
+    "vue-resource": "^1.0.3",
+    "vue-router": "^2.0.1",
+    "vuex": "^2.0.0",
+    "webpack": "^2.1.0-beta.27",
+    "webpack-dev-server": "^2.1.0-beta.11",
+    "weixin-js-sdk": "^1.0.7"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
