--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "file-loader": "^0.9.0",
     "js-sha1": "^0.4.0",
     "json-loader": "^0.5.4",
+    "mongoose": "^4.7.2",
     "node-sass": "^3.10.1",
     "postcss-loader": "^1.1.1",
     "sass-loader": "^4.0.2",
