--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vue": "^2.0.1",
+    "vue": "^2.1.6",
     "vue-awesome-swiper": "^2.2.3",
-    "vue-loader": "^9.7.0",
+    "vue-loader": "^10.0.2",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
+    "vue-template-compiler": "^2.1.6",
     "vuex": "^2.0.0",
     "webpack": "^2.1.0-beta.27",
     "webpack-dev-server": "^2.1.0-beta.11",
