--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vuex": "^2.0.0",
     "webpack": "^2.1.0-beta.27",
     "webpack-dev-server": "^2.1.0-beta.11",
+    "webpack-require-http": "^0.3.0",
     "weixin-js-sdk": "^1.0.7"
   },
   "devDependencies": {}
