--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server  --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --display-modules --sort-modules-by size"
+    "build": "cross-env NODE_ENV=production webpack --progress ",
+    "analyse": "cross-env NODE_ENV=production webpack --profile --json > stats.json"
   },
   "dependencies": {
-    "autoprefixer": "^6.5.3",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
@@ -17,16 +17,13 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "fastclick": "^1.0.6",
     "file-loader": "^0.9.0",
-    "js-sha1": "^0.4.0",
-    "json-loader": "^0.5.4",
-    "mongoose": "^4.7.2",
     "node-sass": "^3.10.1",
     "postcss-loader": "^1.1.1",
     "sass-loader": "^4.0.2",
+    "scriptjs": "^2.5.8",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue": "^2.1.6",
-    "vue-awesome-swiper": "^2.2.6",
     "vue-loader": "^10.0.2",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
@@ -34,7 +31,6 @@
     "vuex": "^2.0.0",
     "webpack": "^2.1.0-beta.27",
     "webpack-dev-server": "^2.1.0-beta.11",
-    "webpack-require-http": "^0.3.0",
     "weixin-js-sdk": "^1.0.7"
   },
   "devDependencies": {}
