--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "analyse": "cross-env NODE_ENV=production webpack --profile --json > stats.json"
   },
   "dependencies": {
+    "alloytouch": "^0.2.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
@@ -24,9 +25,12 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue": "^2.1.6",
+    "vue-infinite-scroll": "^2.0.0",
+    "vue-lazyload": "^1.0.0-rc7",
     "vue-loader": "^10.0.2",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
+    "vue-swipe": "^2.0.2",
     "vue-template-compiler": "^2.1.6",
     "vuex": "^2.0.0",
     "webpack": "^2.1.0-beta.27",
