--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss-loader": "^1.1.1",
     "sass-loader": "^4.0.2",
     "scriptjs": "^2.5.8",
+    "sha1": "^1.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue": "^2.1.6",
