--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vue-swipe": "^2.0.2",
+    "vue-template-compiler": "^2.2.0",
     "vue-touch": "^1.1.0",
     "vuex": "^2.0.0",
     "webpack": "^2.1.0-beta.27",
