--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "analyse": "cross-env NODE_ENV=production webpack --profile --json > stats.json"
   },
   "dependencies": {
+    "alloytouch": "^0.2.1",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
