充值 subject外链点击记录 按钮bug

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server  --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress ",
-    "analyse": "cross-env NODE_ENV=production webpack --profile --json > stats.json"
+    "build": " cross-env NODE_ENV=production webpack --progress ",
+    "analyse": "cross-env NODE_ENV=production webpack --profile --json > stats.json",
+    "delete": "rm -rf dist index.html"
   },
   "dependencies": {
     "alloytouch": "^0.2.1",
