--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "alloytouch": "^0.2.1",
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
@@ -20,6 +21,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^3.10.1",
+    "postcss-flexibility": "^1.1.0",
     "sass-loader": "^4.0.2",
     "scriptjs": "^2.5.8",
     "style-loader": "^0.13.1",
