--- a/package.json
+++ b/package.json
@@ -10,37 +10,36 @@
   },
   "dependencies": {
     "alloytouch": "^0.2.1",
-    "autoprefixer": "^6.7.7",
+    "fastclick": "^1.0.6",
+    "scriptjs": "^2.5.8",
+    "vue": "^2.2.6",
+    "vue-resource": "^1.0.3",
+    "vue-router": "^2.0.1",
+    "vue-swipe": "^2.0.2",
+    "vuex": "^2.0.0",
+    "weixin-js-sdk": "^1.0.7"
+  },
+  "devDependencies": {
+    "vue-loader": "^10.0.2",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
+    "vue-template-compiler": "^2.2.0",
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "cross-env": "^3.0.0",
-    "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "fastclick": "^1.0.6",
-    "file-loader": "^0.9.0",
+    "autoprefixer": "^6.7.7",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^3.10.1",
     "postcss-flexibility": "^1.1.0",
-    "sass-loader": "^4.0.2",
-    "scriptjs": "^2.5.8",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "vue": "^2.1.6",
-    "vue-lazyload": "^1.0.0-rc7",
-    "vue-loader": "^10.0.2",
-    "vue-resource": "^1.0.3",
-    "vue-router": "^2.0.1",
-    "vue-swipe": "^2.0.2",
-    "vue-template-compiler": "^2.2.0",
-    "vue-touch": "^1.1.0",
-    "vuex": "^2.0.0",
-    "webpack": "^2.1.0-beta.27",
-    "webpack-dev-server": "^2.1.0-beta.11",
-    "weixin-js-sdk": "^1.0.7"
-  },
-  "devDependencies": {
     "eslint": "^3.18.0",
-    "eslint-loader": "^1.7.0"
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-vue": "^2.0.1"
   }
 }
