游戏说明 订单详情+详情说明

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
         "location":false,
         "sessionStorage":false,
         "localStorage":false,
-        "event":false
+        "event":false,
+        "AIR":false
     },
     "rules": {
         "semi": ["error", "always"],
