--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fastclick": "^1.0.6",
     "scriptjs": "^2.5.8",
     "vue": "^2.2.6",
+    "vue-awesome-swiper": "^2.4.0",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vue-swipe": "^2.0.2",
@@ -34,7 +35,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.9.0",
-    "node-sass": "^3.10.1",
+    "node-sass": "^4.5.2",
     "postcss-flexibility": "^1.1.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
