--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server  --inline --hot",
-    "start": "http-server",
+    "server": "http-server",
     "build": " rm -rf dist index.html && cross-env NODE_ENV=production webpack --progress ",
     "analyse": "cross-env NODE_ENV=production webpack --profile --json > stats.json"
   },
@@ -13,11 +13,10 @@
     "alloytouch": "^0.2.1",
     "fastclick": "^1.0.6",
     "scriptjs": "^2.5.8",
-    "vue": "^2.2.6",
+    "vue": "^2.3.2",
     "vue-awesome-swiper": "^2.4.0",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
-    "vue-swipe": "^2.0.2",
     "vuex": "^2.0.0",
     "weixin-js-sdk": "^1.0.7"
   },
@@ -41,7 +40,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.2",
-    "vue-template-compiler": "^2.2.0",
+    "vue-template-compiler": "^2.3.2",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   }
