--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "scriptjs": "^2.5.8",
     "vue": "^2.3.2",
     "vue-awesome-swiper": "^2.4.0",
+    "vue-lazyload": "^1.0.3",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0",
