--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "camelcase": "off",
         "comma-dangle": "off",
         "spaced-comment": "off",
-        "one-var":["error","always"]
+        "one-var":["error","always"],
+        "operator-linebreak":"off"
     }
 }
