--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "integral-mall-2",
   "description": "A Vue.js project",
-  "author": "GenesisChou <447074838@qq.com>",
+  "author": "GenesisChou <genesischou@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "sudo cross-env NODE_ENV=development webpack-dev-server --inline --hot",
@@ -25,12 +25,11 @@
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
-    "eslint": "^3.18.0",
-    "eslint-config-vue": "^2.0.2",
-    "eslint-plugin-vue": "^2.0.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.28.0",
