--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "alloytouch": "^0.2.1",
     "fastclick": "^1.0.6",
+    "js-cookie": "^2.1.4",
     "scriptjs": "^2.5.8",
     "vue": "^2.3.2",
     "vue-awesome-swiper": "^2.4.0",
